* item names only render when close now, woops.
* uniques no longer have affixes but their unique stats are now increased
* removed conditional chaos stats (on low crit..etc , boring)
* chaos stats are now more elaborate, you can't get armor on weapons etc. Also added a few more of them.
* tweaked unique gears to be more generally useful
* added new affixes, you won't like them.

3.4.2
* creative players can now destroy dungeon blocks and place them.
* should fix mending wasting lvls if cant be repaired
* repair station should accept fuels now with hoppers by side
* now by default renders loot item names on ground
* added a recipe to break down ores
* ore/fuel ratio should have no loss now

3.4.1
* fix unique compatible items
* fix mob damage level scaling being wrong.
* implemented attack cooldown. Unsure if perfect. But at least i know it reduces damage based on the attack speed.
* made attacks with 90%> attack cooldown get refunded energy and mana costs. So if you attack at 95%, you only use 95% energy.
But if you attack with 20% attack cooldown, you use more energy. (up to change) Intended to encourage healthy clicking and some timing.
* tuned up stat scaling (config)
* hammers now only aoe when atk cooldown is refreshed enough
* hammers do double damage if attacking only 1 target at refreshed cooldown. They should be good as main weapon now
* reduced max default player lvl to 60
* tweaked xp formula
* reduced boss xp 
* added nether dungeon theme

3.4.0

* removed mythic rarity, epics are now purple, rares are now blue. Higher rarities are now much better than lower ones
* removed alchemy station, professions are a failed system. 
* higher rarities now have more secondary stats
* made mobs stronger at higher levels. 
* removed item rarity configs, now they are configurable as datapacks (still unsure if they should be configs or datapacks but for now they can be datapacks..)
* removed wands
* fixed item dupe with bags with right clicking on offhand