@@ -304,7 +304,7 @@ eb1a7aa06a4578ea885eafb868881438b3d9553b data\mmorpg\affixes\prefix\bonus_thunde
 e5e4352380da7f2d1ab67df85e3b263b881dacdf data\mmorpg\affixes\prefix\brave_heart.json
 6a74d8d51fdd149bb2bb7b4e7bf237284c0fdc9a data\mmorpg\affixes\prefix\broken.json
 bab3e045c8452f364cb2c6b6c98bc7b6d9621143 data\mmorpg\affixes\prefix\colossal.json
-11aca2eaba4b745c3fe5574a4ae17b6100d68b3a data\mmorpg\affixes\prefix\cursed_undead.json
+d2705ca0e9731e6fe277c918d17feff706b1eb0a data\mmorpg\affixes\prefix\cursed_undead.json
 118f6367b644f8ed0146d9e2db0ffb12c7a2a2c7 data\mmorpg\affixes\prefix\deep_mind.json
 0c32fa853539fa5b409685bffb22d95723ab0b9d data\mmorpg\affixes\prefix\defenders.json
 f1db7c77937db436f65ea5407dba78f8908c9037 data\mmorpg\affixes\prefix\enduring_field.json
@@ -653,20 +653,20 @@ f84f1ce7a838be1f934b82167c94c27d8cb6507c data\mmorpg\recipes\mat\crystallized_es
 1ae157ed18f265da83c446ee1daf0941448526ed data\mmorpg\recipes\mat\infused_iron.json
 a03ed1a87b193f1829d9ea2a001540440d0c5539 data\mmorpg\recipes\mat\mythic_essence.json
 89e6b43e91e0217a25a3d5460b52a4b0bbd0860f data\mmorpg\recipes\teleport_scroll.json
-cb9ccd02ebc7327927f585614fb8f75448b2c468 data\mmorpg\runes\ano.json
+eb77abd47a02df40f25cc3f882b02ce296dde306 data\mmorpg\runes\ano.json
 9373b99d25e26b012ca8b80123d8be7b162c5d9c data\mmorpg\runes\ber.json
-a9f26622d69e18388d77b6b0f4c9cfa22c50aa10 data\mmorpg\runes\cen.json
-29bc1476d72f59ba6a04e0f88c5bfd8e8fcf110a data\mmorpg\runes\dos.json
-032228620f7782312121be315478f5b737cb28b0 data\mmorpg\runes\goh.json
-b83659f326e05f6616c3f040fdd3463b2c807be7 data\mmorpg\runes\ita.json
-314796ee940b17b2168248053fa259051f4fc5aa data\mmorpg\runes\mos.json
+00580736fe27e98343d6a827ff3b3b2f5cc8faf8 data\mmorpg\runes\cen.json
+86c1238f9bd2950684ecbbbe0c6c8ff342d21dc7 data\mmorpg\runes\dos.json
+aa340d3d9c66f10c702dd38a918ee9177db0476d data\mmorpg\runes\goh.json
+95b82605a6b02ba5f7364aa291f0ecb1a7fd0477 data\mmorpg\runes\ita.json
+322ea6e509a48d53dab6da952dd6c3385f0c925d data\mmorpg\runes\mos.json
 cb20157d8c2a9a4e00f4194c0eee56348ff398f2 data\mmorpg\runes\oni.json
 c167d18849dd1bd2d30bb1b9bc1aa82f061d13ef data\mmorpg\runes\psi.json
-2672428ae49b5b4a53e0c79412b9f732603d920f data\mmorpg\runes\qar.json
-6e8952432ea00c1a59774fdf4b7fa1afa4edc25b data\mmorpg\runes\rah.json
-9b44594384e742ff0f0bedf5350ae5703fcf2358 data\mmorpg\runes\voh.json
-e6596ba39b77ac838a141a4c0df37fd2f9f97621 data\mmorpg\runes\wor.json
-719e7409b472a5662396a4055517e181fcb993fc data\mmorpg\runes\xah.json
+29d5ae3abf31413bdff77102a606ba01009f5f34 data\mmorpg\runes\qar.json
+ee00576ba685df81735f5ee1726891564ca3ef62 data\mmorpg\runes\rah.json
+0cfe7f6cab84ea9fad5afaee59742ff6abb47db7 data\mmorpg\runes\voh.json
+7716af06acca5e5d7efa7be653accc560618a244 data\mmorpg\runes\wor.json
+d8db86b9ee1236a0be7db74e4a3c3b78e1eee6be data\mmorpg\runes\xah.json
 9b58fa2256420ce10629bdfc5c88b90b0e8ea017 data\mmorpg\rune_words\2_runes\bloom.json
 209187492313231e12592101b7add91861b32c13 data\mmorpg\rune_words\2_runes\magic.json
 ab9e19f4f914b62731562e8a08f8c62ab32cb68c data\mmorpg\rune_words\2_runes\magma.json
