@@ -93,7 +93,7 @@ public class GiveUniqueGear {
         for (int i = 0; i < amount; i++) {
 
             UniqueGearBlueprint blueprint = new UniqueGearBlueprint(lvl, tier, true);
-
+            blueprint.unidentifiedPart.set(false);
             if (type.equals("random") == false) {
                 blueprint.gearItemSlot.set(type);
             }
